force-app/main/default/objects/Unit_Economics__c/Unit_Economics__c.object-meta.xml
<CustomObject>
    <label>Unit Economics</label>
    <nameField>
        <displayFormat>UE-{000000}</displayFormat>
        <label>Unit Economics Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Economics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>