force-app/main/default/objects/Unit_Economics__c/fields/Anchor_Esc_Fre__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Esc_Fre__c</fullName>
    <label>Anchor Esc Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>