force-app/main/default/objects/Unit_Economics__c/fields/Anchor_TCF_yr__c.field-meta.xml
<CustomField>
    <fullName>Anchor_TCF_yr__c</fullName>
    <label>Anchor TCF/yr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>