force-app/main/default/objects/Unit_Economics__c/fields/Approval_Assignment_Flag__c.field-meta.xml
<CustomField>
    <fullName>Approval_Assignment_Flag__c</fullName>
    <formula>if(  ChangedTotalCapex__c  &lt;50000 &amp;&amp;  X8_Year_IRR__c &gt;0.10,&apos;NA&apos;,&apos;UE1&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Assignment Flag</label>
    <type>Text</type>
</CustomField>