force-app/main/default/objects/Unit_Economics__c/fields/Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Process</label>
    <referenceTo>strk__Approval_Process__c</referenceTo>
    <relationshipLabel>Unit Economics</relationshipLabel>
    <relationshipName>Unit_Economics</relationshipName>
    <type>Lookup</type>
</CustomField>