force-app/main/default/objects/Unit_Economics__c/fields/Approval_Process_Approved_Capex__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Approved_Capex__c</fullName>
    <label>Total Last Approved Capex</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>