force-app/main/default/objects/Unit_Economics__c/fields/Approval_Process_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Decision_Date__c</fullName>
    <label>Approval Process Decision Date</label>
    <type>DateTime</type>
</CustomField>