force-app/main/default/objects/Unit_Economics__c/fields/Approval_Process_Template__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Process Template</label>
    <referenceTo>strk__Approval_Process_Template__c</referenceTo>
    <relationshipLabel>Unit Economics</relationshipLabel>
    <relationshipName>Unit_Economics</relationshipName>
    <type>Lookup</type>
</CustomField>