force-app/main/default/objects/Unit_Economics__c/fields/BD_Sr_Vice_President__c.field-meta.xml
<CustomField>
    <fullName>BD_Sr_Vice_President__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BD Sr. Vice President</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Unit_Economics_BDVP</relationshipName>
    <type>Lookup</type>
</CustomField>