force-app/main/default/objects/Unit_Economics__c/fields/Carrier_Bonus_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Bonus_Subsidy__c</fullName>
    <label>Carrier Bonus/Subsidy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>