force-app/main/default/objects/Unit_Economics__c/fields/ChangedTotalCapex__c.field-meta.xml
<CustomField>
    <fullName>ChangedTotalCapex__c</fullName>
    <formula>(Total_Capex__c -  Easement_Acquisition__c ) - IF(isblank( Approval_Process_Approved_Capex__c ),0,Approval_Process_Approved_Capex__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Capex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>