force-app/main/default/objects/Unit_Economics__c/fields/Chief_Financial_Officer__c.field-meta.xml
<CustomField>
    <fullName>Chief_Financial_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chief Financial Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Unit_Economics_CFO</relationshipName>
    <type>Lookup</type>
</CustomField>