force-app/main/default/objects/Unit_Economics__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>Text(  Project__r.strk__Customer__c )</formula>
    <label>Customer</label>
    <type>Text</type>
</CustomField>