force-app/main/default/objects/Unit_Economics__c/fields/Distance_from_Ring__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Ring__c</fullName>
    <label>Distance from Ring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ring Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>