force-app/main/default/objects/Unit_Economics__c/fields/Ground_Esc_Term_Length_Yrs__c.field-meta.xml
<CustomField>
    <fullName>Ground_Esc_Term_Length_Yrs__c</fullName>
    <label>Ground Esc Term Length (Yrs)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>