force-app/main/default/objects/Unit_Economics__c/fields/Ground_Expense__c.field-meta.xml
<CustomField>
    <fullName>Ground_Expense__c</fullName>
    <label>Ground Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>