force-app/main/default/objects/Unit_Economics__c/fields/Ground_Rent__c.field-meta.xml
<CustomField>
    <fullName>Ground_Rent__c</fullName>
    <label>Ground Rent/mo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>