force-app/main/default/objects/Unit_Economics__c/fields/Ground_Rent_Esc__c.field-meta.xml
<CustomField>
    <fullName>Ground_Rent_Esc__c</fullName>
    <label>Ground Rent Esc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>