force-app/main/default/objects/Unit_Economics__c/fields/Ground_Rent_Pass_Through__c.field-meta.xml
<CustomField>
    <fullName>Ground_Rent_Pass_Through__c</fullName>
    <label>Ground Rent Pass-Through</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>