force-app/main/default/objects/Unit_Economics__c/fields/Index_Rate__c.field-meta.xml
<CustomField>
    <fullName>Index_Rate__c</fullName>
    <label>Index Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>