force-app/main/default/objects/Unit_Economics__c/fields/Latest_Approved__c.field-meta.xml
<CustomField>
    <fullName>Latest_Approved__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Latest Approved</label>
    <type>Checkbox</type>
</CustomField>