force-app/main/default/objects/Unit_Economics__c/fields/Latest_Unit_Economics__c.field-meta.xml
<CustomField>
    <fullName>Latest_Unit_Economics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Latest Unit Economics</label>
    <type>Checkbox</type>
</CustomField>