force-app/main/default/objects/Unit_Economics__c/fields/Monthly_Rent_incl_Ground_Reimb__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rent_incl_Ground_Reimb__c</fullName>
    <label>Monthly Rent (incl Ground Reimb)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>