force-app/main/default/objects/Unit_Economics__c/fields/Other_Opex_yr__c.field-meta.xml
<CustomField>
    <fullName>Other_Opex_yr__c</fullName>
    <label>Other Opex/yr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>