force-app/main/default/objects/Unit_Economics__c/fields/Pipeline_Colo__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Colo__c</fullName>
    <label>Pipeline Colo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>