force-app/main/default/objects/Unit_Economics__c/fields/Pipeline_Colo_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Colo_Amount__c</fullName>
    <label>Pipeline Colo Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>