force-app/main/default/objects/Unit_Economics__c/fields/Project_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Project_Acceptance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Acceptance</label>
    <referenceTo>Project_Acceptance__c</referenceTo>
    <relationshipLabel>Unit Economics</relationshipLabel>
    <relationshipName>Unit_Economics</relationshipName>
    <type>Lookup</type>
</CustomField>