force-app/main/default/objects/Unit_Economics__c/fields/Project_Current_UE_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Project_Current_UE_Uploaded__c</fullName>
    <formula>IF ( INCLUDES ( Project__r.Project_Extension__r.Uploaded_UE_Milestones__c , &quot;Project Acceptance UE&quot; ), &quot;Project Acceptance UE; &quot;,null ) &amp;
IF ( INCLUDES ( Project__r.Project_Extension__r.Uploaded_UE_Milestones__c, &quot;SCIP UE&quot; ), &quot;SCIP UE; &quot;,null ) &amp;
IF ( INCLUDES ( Project__r.Project_Extension__r.Uploaded_UE_Milestones__c, &quot;Ground Lease UE&quot; ), &quot;Ground Lease UE; &quot;,null ) &amp;
IF ( INCLUDES ( Project__r.Project_Extension__r.Uploaded_UE_Milestones__c, &quot;Pre-Cx UE&quot; ), &quot;Pre-Cx UE; &quot;,null ) &amp;
IF ( INCLUDES ( Project__r.Project_Extension__r.Uploaded_UE_Milestones__c, &quot;Final UE&quot; ), &quot;Final UE; &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Current UE Uploaded</label>
    <type>Text</type>
</CustomField>