force-app/main/default/objects/Unit_Economics__c/fields/Project_Extension__c.field-meta.xml
<CustomField>
    <fullName>Project_Extension__c</fullName>
    <formula>Project__r.Project_Extension__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Extension</label>
    <type>Text</type>
</CustomField>