force-app/main/default/objects/Unit_Economics__c/fields/Revenue_Share_Flat_Amount__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share_Flat_Amount__c</fullName>
    <label>Revenue Share Flat  Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>