force-app/main/default/objects/Unit_Economics__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Name</label>
    <referenceTo>strk__Site__c</referenceTo>
    <relationshipLabel>Unit Economics</relationshipLabel>
    <relationshipName>Unit_Economics4</relationshipName>
    <type>Lookup</type>
</CustomField>