force-app/main/default/objects/Unit_Economics__c/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <formula>Site__r.Site_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site ID</label>
    <type>Text</type>
</CustomField>