force-app/main/default/objects/Unit_Economics__c/fields/TCF_Yield_of_Total_Capital__c.field-meta.xml
<CustomField>
    <fullName>TCF_Yield_of_Total_Capital__c</fullName>
    <label>TCF Yield %  (% of Total Capital)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>