force-app/main/default/objects/Unit_Economics__c/fields/Tenant_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Site_ID__c</fullName>
    <label>Tenant Site ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>