force-app/main/default/objects/Unit_Economics__c/fields/TIA_Inspections_yr__c.field-meta.xml
<CustomField>
    <fullName>TIA_Inspections_yr__c</fullName>
    <label>TIA Inspections/yr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>