force-app/main/default/objects/Unit_Economics__c/fields/Total_Capex__c.field-meta.xml
<CustomField>
    <fullName>Total_Capex__c</fullName>
    <label>Total Capex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>