force-app/main/default/objects/Unit_Economics__c/fields/Total_Direct_Opex_yr__c.field-meta.xml
<CustomField>
    <fullName>Total_Direct_Opex_yr__c</fullName>
    <label>Total Direct Opex/yr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>