force-app/main/default/objects/Unit_Economics__c/fields/Tower_modification_Required__c.field-meta.xml
<CustomField>
    <fullName>Tower_modification_Required__c</fullName>
    <label>Tower modification Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>