force-app/main/default/objects/Unit_Economics__c/fields/UE_Milestone__c.field-meta.xml
<CustomField>
    <fullName>UE_Milestone__c</fullName>
    <label>UE Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Acceptance UE</fullName>
            </value>
            <value>
                <fullName>Ground Lease UE</fullName>
            </value>
            <value>
                <fullName>SCIP UE</fullName>
            </value>
            <value>
                <fullName>Revised UE</fullName>
            </value>
            <value>
                <fullName>Pre-Cx UE</fullName>
            </value>
            <value>
                <fullName>In-Cx UE</fullName>
            </value>
            <value>
                <fullName>Final UE</fullName>
            </value>
            <value>
                <fullName>Construction UE</fullName>
                <isActive>false</isActive>
                <label>Construction UE</label>
            </value>
            <value>
                <fullName>Development UE</fullName>
                <isActive>false</isActive>
                <label>Development UE</label>
            </value>
            <value>
                <fullName>Finance Update</fullName>
                <isActive>false</isActive>
                <label>Finance Update</label>
            </value>
            <value>
                <fullName>SLA UE</fullName>
                <isActive>false</isActive>
                <label>SLA UE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>