force-app/main/default/objects/Unit_Economics__c/fields/UE_Notes__c.field-meta.xml
<CustomField>
    <fullName>UE_Notes__c</fullName>
    <label>UE Notes</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>