force-app/main/default/objects/Unit_Economics__c/fields/UESiteValueEntered__c.field-meta.xml
<CustomField>
    <fullName>UESiteValueEntered__c</fullName>
    <formula>IF( (Site__r.Structure_Height__c) &gt; 0 &amp;&amp; Not(ISBLANK(Text(Site__r.Tower_Type__c))) ,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UESiteValueEntered</label>
    <type>Checkbox</type>
</CustomField>