force-app/main/default/objects/Unit_Economics__c/validationRules/Check_On_UE_Version.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_On_UE_Version</fullName>
    <active>false</active>
    <errorConditionFormula>Not(IsBlank( Uploaded_UEVersion__c)) &amp;&amp;  Uploaded_UEVersion__c != UEVersion__c &amp;&amp; NOT(ISNEW()) &amp;&amp; AND (

ISCHANGED( Latest_Unit_Economics__c),

Latest_Unit_Economics__c = TRUE,

PRIORVALUE(Latest_Unit_Economics__c) = FALSE)</errorConditionFormula>
    <errorMessage>UE Version uploaded doesn&apos;t match the latest version of UE. Please download latest version and then upload UE.</errorMessage>
</ValidationRule>