force-app/main/default/objects/Unit_Economics__c/validationRules/Locking_for_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Locking_for_Update</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
    !ISNEW(),  
    OR (
        IsChanged( Version__c ),
        IsChanged( Project__c ),
        IsChanged( Project_Acceptance__c ),
        IsChanged( Site__c )
    )
)</errorConditionFormula>
    <errorMessage>Can&apos;t Modify Version, Project, Project Acceptance and Site information</errorMessage>
</ValidationRule>