force-app/main/default/objects/Unit_Economics__c/validationRules/Record_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Lock</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
!ISNEW(),
OR( ISPICKVAL(PRIORVALUE(Approval_Status__c), &apos;Approved&apos;),
ISPICKVAL(PRIORVALUE(Approval_Status__c), &apos;Rejected&apos;),
ISPICKVAL(PRIORVALUE(Approval_Status__c), &apos;Bulk Approved&apos;),
ISPICKVAL(PRIORVALUE(Approval_Status__c), &apos;Auto Approved&apos;)),

NOT(ISBLANK(UE_Last_Updated__c)), 
NOT(IsChanged( Latest_Unit_Economics__c )),
NOT(IsChanged( UE_Last_Updated__c ))
)</errorConditionFormula>
    <errorDisplayField>Anchor_Esc__c</errorDisplayField>
    <errorMessage>Record will up updated from UE upload.</errorMessage>
</ValidationRule>