force-app/main/default/objects/Unit_Economics__c/listViews/Collocation_Accptance.listView-meta.xml
<ListView>
    <fullName>Collocation_Accptance</fullName>
    <columns>Site_ID__c</columns>
    <columns>Site__c</columns>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Total_Capex__c</columns>
    <columns>BD_Lead__c</columns>
    <columns>Project_Management_Director__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Collocation Accptance</label>
</ListView>