force-app/main/default/objects/Unit_Economics__c/listViews/Copy_of_Development_Acceptance.listView-meta.xml
<ListView>
    <fullName>Copy_of_Development_Acceptance</fullName>
    <columns>Site_ID__c</columns>
    <columns>Site__c</columns>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>BD_Lead__c</columns>
    <columns>Project_Management_Director__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Ground Lease Buyout Acceptance</label>
</ListView>